tests/baselines/reference/parserAccessors9.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors9.ts(1,15): error TS1049: A 'set' accessor must have exactly one parameter.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors9.ts (1 errors) ====
    var v = { set foo(a, b) { } }
                  ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.